Now, application uses Qt drawing functionality, rather than SFML.\nApplication is based on interface designed in QtDesigner.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,41 @@
-set(CORE_SOURCE_FILES main.cpp QSFMLCanvas.cpp QSFMLCanvas.h MyCanvas.cpp MyCanvas.h MainWindow.cpp MainWindow.h)
+find_package(Qt5 REQUIRED COMPONENTS Core Widgets UiTools)
 
-add_executable(RasterShop ${CORE_SOURCE_FILES})
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-#######################################################
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
-find_package(SFML 2 COMPONENTS network audio graphics window system REQUIRED)
-if(SFML_FOUND)
-	message(STATUS "${SFML_LIBRARIES}")
-	include_directories(${SFML_INCLUDE_DIR})
-	target_link_libraries(RasterShop sfml-graphics sfml-audio pthread)
-endif()
-#######################################################
+set(project_sources
+		main.cpp
+		UserInterface.cpp
+		Canvas.cpp
+		ApplicationSettings.cpp
+		MainWindow.cpp
+		MainWindowX.cpp
+		)
 
-#######################################################
-find_package(Qt5Widgets CONFIG REQUIRED)
-if(Qt5Widgets_FOUND)
+set(project_headers
+		UserInterface.h
+		Canvas.h
+		ApplicationSettings.h
+		MainWindow.h
+		MainWindowX.h
+		)
+
+set(project_ui
+		MainWindowX.ui
+		)
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+set(AUTOMOC_MACRO_NAMES ${project_headers})
+set(AUTOGEN_BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/nowyXD)
+
+add_executable(RasterShop ${project_sources} ${project_headers})
+
+set_target_properties(RasterShop PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+set_target_properties(RasterShop PROPERTIES OUTPUT_NAME_DEBUG RasterShop-debug)
+set_target_properties(RasterShop PROPERTIES OUTPUT_NAME_RELEASE RasterShop)
+
+if(Qt5Widgets_FOUND AND Qt5UiTools_FOUND)
 	message(STATUS "Qt has been found")
-	target_link_libraries(RasterShop Qt5::Widgets)
+	target_link_libraries(RasterShop Qt5::Widgets Qt5::UiTools)
 endif()
-#######################################################
