Commit before huge refactor.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,7 @@ find_package(Qt5 REQUIRED COMPONENTS Core Widgets UiTools)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-include(source-files.cmake)
-include(header-files.cmake)
-include(ui-files.cmake)
+file(GLOB_RECURSE source_list "*.cpp" "*.h")
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -13,7 +11,7 @@ set(AUTOMOC_MACRO_NAMES ${project_headers})
 set(AUTOGEN_BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/nowyXD)
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/uis)
 
-add_executable(RasterShop ${project_sources} ${project_headers})
+add_executable(RasterShop ${source_list})
 
 set_target_properties(RasterShop PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 set_target_properties(RasterShop PROPERTIES OUTPUT_NAME_DEBUG RasterShop-debug)
