--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets UiTools Svg)
+find_package(OpenCV REQUIRED)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -22,4 +23,8 @@ set_target_properties(RasterShop PROPERTIES OUTPUT_NAME_RELEASE RasterShop)
 if(Qt5Widgets_FOUND AND Qt5UiTools_FOUND)
 	message(STATUS "Qt has been found")
 	target_link_libraries(RasterShop Qt5::Widgets Qt5::UiTools Qt5::Svg)
+endif()
+
+if(OpenCV_FOUND)
+	target_link_libraries(RasterShop ${OpenCV_LIBS})
 endif()
